--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -28,11 +28,8 @@
         <div class="container d-flex justify-content-center justify-content-lg-between align-items-center">
           <div class="col-3">
             <ul class="list-inline small mb-0 text-dark d-none d-lg-block">
-              <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-twitter"></i></a></li>
+              <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-              <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-linkedin"></i></a></li>
-              <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-youtube"></i></a></li>
             </ul>
 
           </div>
@@ -54,11 +51,8 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <ul class="list-inline small mb-0 text-dark d-block d-lg-none">
-            <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-linkedin"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-youtube"></i></a></li>
+            <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
           </ul>
           <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -132,11 +126,8 @@
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
               <ul class="list-inline small mb-0 text-white">
-                <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-twitter"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-linkedin"></i></a></li>
-                <li class="list-inline-item"><a class="reset-anchor" href="#!"><i class="fab fa-youtube"></i></a></li>
               </ul>
             </div>
           </div>
