changes to index

--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
       <div class="row">
         <h4 class="text-center mt-5 logo-font">Customer Testimonials</h4>
         <div class="col">
-          <p class="text-center border border-">Thank you for providing us with
+          <!-- <p class="text-center border border-">Thank you for providing us with
             a incredible experience this weekend! if
             you are looking for
             a luxury outdoor experience in the confort
             of your backyard, then look no further!
             Glamping by Cyn is the place. the level of
             intentional and love is just amazing
-            Ed C.</p>
+            Ed C.</p> -->
         </div>
       </div>
     </div>
