--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Glamping by Cyn | Est 2021</title>
+    <title>Details by Cyn | Glamping</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -38,11 +38,11 @@
               <p>est 2021</p>
             </div>
             <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Glamping by Cyn</a>
+              <a class="logo logo-font" href="index.html">Details by Cyn</a>
             </div>
           </div>
           <div class="col-3">
-            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:glampingbycyn@gmail.com"><i class="far fa-envelope me-2"></i>glampingbycyn@gmail.com</a>
+            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
 
           </div>
         </div>
@@ -60,14 +60,14 @@
               <li class="nav-item">
                 <!-- Navbar link--><a class="nav-link" href="index.html">Home</a>
               </li>
-              <li class="nav-item"><a class="nav-link active" id="listingVariants" href="backyard-glamping.html" aria-haspopup="true" aria-expanded="false">Backyard Glamping</a>
+              <li class="nav-item"><a class="nav-link active" id="listingVariants" href="backyard-glamping.html">Glamping</a>
                 
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Glamping Party</a>
+                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
+                <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
             </ul>
           </div>
@@ -77,7 +77,7 @@
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
         <div class="row">
-          <h3 class="text-center logo-font pt-5"">Backyard Glamping Package</h3>
+          <h3 class="text-center logo-font pt-5"">Glamping</h3>
           <div class="img-stack pt-5">
             <div class="img-stack-top">
               <img src="img/HD-photos/inside-tent4.jpeg" id="top-photo" alt="">
@@ -121,7 +121,7 @@
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col-md-4 text-lg-start logo-font">Glamping with Cyn</div>
+          <div class="col-md-4 text-lg-start logo-font">Details by Cyn</div>
           <div class="col-md-4 text-center">
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
