--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Glamping by Cyn | Est. 2021</title>
+    <title>Details by Cyn | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -39,11 +39,11 @@
               <p>est 2021</p>
             </div>
             <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Glamping by Cyn</a>
+              <a class="logo logo-font" href="index.html">Details by Cyn</a>
             </div>
           </div>
           <div class="col-3">
-            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:glampingbycyn@gmail.com"><i class="far fa-envelope me-2"></i>glampingbycyn@gmail.com</a>
+            <a class="reset-anchor text-sm mb-0 h6 d-none d-lg-block" href="mailto:detailsbycyn@gmail.com"><i class="far fa-envelope me-2"></i>detailsbycyn@gmail.com</a>
 
           </div>
         </div>
@@ -61,14 +61,14 @@
               <li class="nav-item">
                 <!-- Navbar link--><a class="nav-link active" href="index.html">Home</a>
               </li>
-              <li class="nav-item"><a class="nav-link" id="listingVariants" href="backyard-glamping.html" aria-haspopup="true" aria-expanded="false">Backyard Glamping</a>
+              <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
                 
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Glamping Party</a>
+                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
+                <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
             </ul>
           </div>
@@ -84,19 +84,18 @@
           </div>
         </div>
         <div class="row">
-          <div class="col d-flex justify-content-center mt-5">
+          <div class="col d-flex justify-content-center mt-5 mb-5">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
-          <h4 class="text-center mt-3 logo-font pb-4">As easy as 1, 2, 3...</h4>
           <div class="row mt-4">
             <div class="col text-center">
-              <i class="logo-font fa-solid fa-fire-flame-curved fa-xl"></i>
+              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
             </div>
             <div class="col text-center">
-              <i class="logo-font fa-solid fa-fire-flame-curved fa-xl"></i>
+              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
             </div>
             <div class="col text-center">
-              <i class="logo-font fa-solid fa-fire-flame-curved fa-xl"></i>
+              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
             </div>
           </div>
           <div class="row mt-3 mb-5">
@@ -113,10 +112,10 @@
         </div>
         <div class="row">
           <div class="col-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-              <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Glamping Party</h4>
+              <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Glamping</h4>
               <p class="text-center lead">Make your party a glamourous experience </p>
               <div class="col d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-design">Learn more</button>
+                <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
               </div>
           </div>
           <div class="col-6 g-0">
@@ -128,10 +127,10 @@
           <img src="img/HD-photos/glamp-tent11.jpeg" class="home-img" width="100%" alt="">
         </div>
         <div class="col-6">
-          <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Backyard Glamping</h4>
+          <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Lounge</h4>
               <p class="text-center lead">A magical experience in the comfort of your backyard </p>
               <div class="col d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-design">Learn more</button>
+                <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
               </div>
         </div>
       </div>
@@ -207,7 +206,7 @@
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
         <div class="row align-items-center">
-          <div class="col-md-4 text-lg-start logo-font">Glamping with Cyn</div>
+          <div class="col-md-4 text-lg-start logo-font">Details by Cyn</div>
           <div class="col-md-4 text-center">
             <div class="d-flex align-items-center flex-wrap justify-content-center">
               <h6 class="text-muted mb-0 py-2 me-3">Follow us<span class="ms-3">-</span></h6>
