--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="row">
           <div class="col-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
               <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Glamping</h4>
-              <p class="text-center lead">Make your party a glamourous experience </p>
+              <p class="text-center lead">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
               <div class="col d-flex justify-content-center mt-5">
                 <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
               </div>
@@ -128,14 +128,25 @@
         </div>
         <div class="col-6">
           <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Lounge</h4>
-              <p class="text-center lead">A magical experience in the comfort of your backyard </p>
-              <div class="col d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
-              </div>
+          <p class="text-center lead">Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
+          <div class="col d-flex justify-content-center mt-5">
+            <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
+              <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Plamping</h4>
+              <div class="col d-flex justify-content-center mt-5">
+                <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
+              </div>
+          </div>
+          <div class="col-6 g-0">
+              <img src="img/HD-photos/picnic-1.jpeg" class="home-img" width="100%" alt="">
+          </div>
+      </div>
       </div>
       <div class="row">
-        <div class="col pb-5" style="background-color: rgba(233, 202, 163, 0.29);">
+        <div class="col pb-5">
           <h4 class="text-center mt-5 logo-font">Add-ons</h4>
           <p class="text-center lead">Customize your Glamping</p>
           <div class="container pt-5 d-flex justify-content-center">
@@ -169,17 +180,14 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
         <h4 class="text-center mt-5 logo-font">Customer Testimonials</h4>
         <div class="col">
-          <!-- <p class="text-center border border-">Thank you for providing us with
-            a incredible experience this weekend! if
-            you are looking for
-            a luxury outdoor experience in the confort
-            of your backyard, then look no further!
-            Glamping by Cyn is the place. the level of
-            intentional and love is just amazing
-            Ed C.</p> -->
+          <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
+          <p class="text-center"></p>
+        </div>
+        <div class="col">
+          <p class="text-center lead testimonials">"Thank you to @glampingbycyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
         </div>
       </div>
     </div>
