--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
             </div>
           </div>
-          <div class="row mt-3 mb-5">
+          <div class="row mt-3 mb-5 mx-1">
             <div class="col">
               <h4 class="text-center logo-font">Pick your glamping</h4>
             </div>
@@ -111,65 +111,65 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-              <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Glamping</h4>
+          <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
+              <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Glamping</h4>
               <p class="text-center lead">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
-              <div class="col d-flex justify-content-center mt-5">
+              <div class="col d-flex justify-content-center mt-5 mb-5">
                 <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
               </div>
           </div>
-          <div class="col-6 g-0">
+          <div class="col col-lg-6 g-0">
               <img src="img/HD-photos/cynthia-family.jpeg" class="home-img" width="100%" alt="">
           </div>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div class="col col-lg-6">
           <img src="img/HD-photos/glamp-tent11.jpeg" class="home-img" width="100%" alt="">
         </div>
-        <div class="col-6">
-          <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Lounge</h4>
+        <div class="col col-lg-6 order-first order-lg-last">
+          <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Lounge</h4>
           <p class="text-center lead">Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
-          <div class="col d-flex justify-content-center mt-5">
+          <div class="col d-flex justify-content-center mt-5 mb-5">
             <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
           </div>
         </div>
-        <div class="row">
-          <div class="col-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-              <h4 class="text-center mt-5 logo-font" style="padding-top: 150px">Plamping</h4>
-              <div class="col d-flex justify-content-center mt-5">
-                <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
-              </div>
-          </div>
-          <div class="col-6 g-0">
-              <img src="img/HD-photos/picnic-1.jpeg" class="home-img" width="100%" alt="">
-          </div>
       </div>
-      </div>
+      <div class="row">
+        <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
+            <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Plamping</h4>
+            <div class="col d-flex justify-content-center mt-5 mb-5">
+              <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
+            </div>
+        </div>
+        <div class="col col-lg-6 g-0">
+            <img src="img/HD-photos/picnic-1.jpeg" class="home-img" width="100%" alt="">
+        </div>
+    </div>
       <div class="row">
         <div class="col pb-5">
           <h4 class="text-center mt-5 logo-font">Add-ons</h4>
           <p class="text-center lead">Customize your Glamping</p>
-          <div class="container pt-5 d-flex justify-content-center">
+          <div class="container pt-lg-5 d-flex justify-content-center">
             <div class="row">
-              <div class="col-3 g-3">
+              <div class="col col-lg-3 g-3 d-flex justify-content-center">
                 <figure>
                   <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
                   <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
                 </figure>
               </div>
-              <div class="col-3 g-3">
+              <div class="col col-lg-3 g-3 d-flex justify-content-center">
                 <figure>
                   <img class="add-on-imgs" id="picnic-table-add-on" src="img/HD-photos/add-on.jpeg" alt="">
                   <figcaption class="lead text-center add-on-text pt-3">Picnic Table</figcaption>
                 </figure>
               </div>
-              <div class="col-3 g-3">
+              <div class="col col-lg-3 g-3 d-flex justify-content-center">
                 <figure>
                   <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
                   <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
                 </figure>
               </div>
-              <div class="col-3 g-3">
+              <div class="col col-lg-3 g-3 d-flex justify-content-center">
                 <figure>
                   <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
                   <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
@@ -182,12 +182,20 @@
       </div>
       <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
         <h4 class="text-center mt-5 logo-font">Customer Testimonials</h4>
-        <div class="col">
-          <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
-          <p class="text-center"></p>
+        <!--Start carousel-->
+
+        <!--End carousel-->
+        <div class="row">
+
+          <div class="col">
+            <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
+            <p class="text-center"></p>
+          </div>
         </div>
-        <div class="col">
-          <p class="text-center lead testimonials">"Thank you to @glampingbycyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
+        <div class="row">
+          <div class="col">
+            <p class="text-center lead testimonials">"Thank you to @glampingbycyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
+          </div>
         </div>
       </div>
     </div>
