--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -69,6 +69,9 @@
               <li class="nav-item">
                 <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
+              <li class="nav-item">
+                <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
+              </li>
             </ul>
           </div>
         </div>
