--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
               <li class="nav-item">
                 <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
+              <li class="nav-item">
+                <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -113,7 +116,7 @@
         <div class="row">
           <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
               <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Glamping</h4>
-              <p class="text-center lead">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
+              <p class="text-center lead mx-3">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
               <div class="col d-flex justify-content-center mt-5 mb-5">
                 <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
               </div>
@@ -142,7 +145,7 @@
             </div>
         </div>
         <div class="col col-lg-6 g-0">
-            <img src="img/HD-photos/picnic-1.jpeg" class="home-img" width="100%" alt="">
+            <img src="img/HD-photos/picnic-1.jpeg" class="home-img" alt="">
         </div>
     </div>
       <div class="row">
