--- a/policies.html
+++ b/policies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Details by Cyn | Plamping</title>
+    <title>Details by Cyn | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
+    
   </head>
   <body>
     <!-- navbar-->
@@ -29,7 +30,7 @@
           <div class="col-3">
             <ul class="list-inline small mb-0 text-dark d-none d-lg-block">
               <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Glamping-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
             </ul>
 
           </div>
@@ -67,94 +68,38 @@
                 <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link active" href="picnic.html">Plamping</a>
+                <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
               <li class="nav-item">
-                <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
+                <!-- Navbar link--><a class="nav-link active" href="policies.html">Policies</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+    <!-- Main post-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
-        <div class="row">
-          <div class="col p-0">
-            <div class="row">
-              <h3 class="text-center logo-font mt-5">Plamping for 2</h3>
+      <div class="container-fluid px-0 pnb-4">
+        <div class="col" style="background-color: rgba(233, 202, 163, 0.29);">
+            <div class="row ">
+                <div class="col d-flex justify-content-center">
+                    <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+                </div>
             </div>
-            <div class="row px-0 floated">
-              <h5>Includes</h5>
-              <ul>
-                <li>Handmade low table for 2</li>
-                <li>Dinnerware, glassware, flatware and napkins</li>
-                <li>Decor table, centerpiece and runner</li>
-                <li>Rugs and pillows for seating </li>
-                <li>Basket with throw blankets</li>
-                <li>Small trash can</li>
-                <li>Hand sanitizer </li>
-                <li>Boxed water per guest</li>
-                <li>Custom letter board announcement </li>
-                <li>charcuterie of meets, cheeses and seasonal assortments</li>
-                <li>Set up and teardown is included</li>
-              </ul>
-              <h5>Price</h5>
-              <p>$225 for 2 hours <sup>*</sup> (extra hour can be added on)</p>
-              <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-              <h5>Add ons </h5>
-              <ul>
-                <li>Charcuterie board </li>
-                <li>Instant camera </li>
-                <li>Balloons </li>
-              </ul>
+            <h4 class="text-center logo-font pt-3">Policies</h4>
+            <div class="row text-center">
+                <h6 class="mt-3 lead">Payment Policy</h6>
+                <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
+                <h6 class="mt-3 lead">Cancellation Policy</h6>
+                <p class="mb-3">No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
             </div>
-          </div>
-          <div class="col p-0">
-            <img src="img/HD-photos/picnic-2.jpeg" class="picnic-photos" alt="">
-          </div>
+            <div class="row ">
+                <div class="col d-flex justify-content-center">
+                    <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+                </div>
+            </div>
         </div>
-        <div class="row">
-          <div class="col p-0">
-            <img src="img/HD-photos/picnic-1.jpeg" class="picnic-photos" alt="">
-          </div>
-          <div class="col p-0" style="background-color: rgb(248, 240, 230);">
-            <div class="row">
-              <h3 class="text-center logo-font mt-5">Plamping for 4</h3>
-            </div>
-            <div class="row px-0 floated">
-              <h5>Includes</h5>
-              <ul>
-                <li>Handmade low table for 4</li>
-                <li>Dinnerware, glassware, flatware and napkins</li>
-                <li>Decor table, centerpiece and runner</li>
-                <li>Rugs and pillows for seating </li>
-                <li>Basket with throw blankets</li>
-                <li>Small trash can</li>
-                <li>Hand sanitizer </li>
-                <li>Boxed water per guest</li>
-                <li>Custom letter board announcement </li>
-                <li>charcuterie of meets, cheeses and seasonal assortments</li>
-                <li>Set up and teardown is included</li>
-              </ul>
-              <h5>Add ons </h5>
-              <ul>
-                <li>Charcuterie board </li>
-                <li>Instant camera </li>
-                <li>Balloons </li>
-              </ul>
-              <h5>Price</h5>
-              <p>$275 for 2 hours <sup>*</sup> (extra hour can be added on)</p>
-              <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center mt-5">
-            <button type="button" class="btn btn-design mb-5">Book Now</button>
-          </div>
-        </div>
-      
       </div>
     </section>
     <footer class="py-4" style="background: #111">
@@ -183,5 +128,6 @@
     <script src="js/front.js"></script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/20601f6150.js" crossorigin="anonymous"></script>
   </body>
 </html>
