--- a/glamping-party.html
+++ b/glamping-party.html
@@ -57,19 +57,19 @@
           <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="index.html">Home</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
+              <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
                 
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link active" href="glamping-party.html">Lounge</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
               </li>
             </ul>
@@ -112,12 +112,6 @@
           <div class="col d-flex justify-content-center mt-5">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
-        </div>
-        <div class="row text-center" style="background-color: rgb(248, 240, 230);">
-          <h6 class="mt-5">PAYMENT POLICY</h6>
-          <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
-          <h6 class="mt-3">CANCELLATION POLICY</h6>
-          <p>No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
         </div>
       </div>
     </section>
