--- a/policies.html
+++ b/policies.html
@@ -58,19 +58,19 @@
           <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="index.html">Home</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
+              <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
                 
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link active" href="policies.html">Policies</a>
               </li>
             </ul>
