--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -80,40 +80,46 @@
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
         <div class="row">
-          <h3 class="text-center logo-font pt-5"">Glamping</h3>
-          <div class="img-stack pt-5">
-            <div class="img-stack-top">
-              <img src="img/HD-photos/inside-tent4.jpeg" id="top-photo" alt="">
-            </div>
-            <div class="img-stack-bottom">
-              <img src="img/HD-photos/glamp-main-photo.jpeg" id="bottom-photo"alt="">
-              <div class="row floated">
-                <h5>Includes</h5>
-                <ul class="px-5">
-                  <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-                  <li>Queen memory foam bed</li>
-                  <li>Decor, rugs and throw pillows  </li>
-                  <li>Side table</li>
-                  <li>Small trash can </li>
-                  <li>Hand sanitizer </li>
-                  <li>Outdoor/indoor lighting</li>
-                  <li>Custom letter board announcement</li>
-                  <li>Board game</li>
-                  <li>Set and pick up is all included</li>
-                </ul>
-                <h5>Price</h5>
-                <p>$450 a night<sup>*</sup> </p>
-                <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+          <h3 class="text-center logo-font pt-5">Glamping</h3>
+          <div class="col">
+              <div class="img-stack pt-5">
+                <div class="img-stack-top">
+                  <img class="img-fluid" src="img/HD-photos/inside-tent4.jpeg" id="top-photo" alt="bottom photo">
+                </div>
+                <div class="img-stack-bottom">
+                  <img class="img-fluid" src="img/HD-photos/glamp-main-photo.jpeg" id="bottom-photo"alt="bottom photo">
+                </div>
               </div>
-            </div>
           </div>
         </div>
+      </div>
+      <div class="container-fluid" style="background-color: rgba(233, 202, 163, 0.29);">
+        <div class="row floated">
+          <h5>Includes</h5>
+          <ul class="px-5">
+            <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
+            <li>Queen memory foam bed</li>
+            <li>Decor, rugs and throw pillows  </li>
+            <li>Side table</li>
+            <li>Small trash can </li>
+            <li>Hand sanitizer </li>
+            <li>Outdoor/indoor lighting</li>
+            <li>Custom letter board announcement</li>
+            <li>Board game</li>
+            <li>Set and pick up is all included</li>
+          </ul>
+          <h5>Price</h5>
+          <p>$450 a night<sup>*</sup> </p>
+          <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+        </div>
+      </div>
+        
         <div class="row " style="background-color: rgb(248, 240, 230);">
           <div class="col d-flex justify-content-center mt-5 mb-5">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
         </div>
-      </div>
+
     </section>
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
