--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
     <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @glampingbycyn</a>
       <div class="container-fluid px-0">
         <div class="row">
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-fluid" src="img/HD-photos/add-on5.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-instagram" src="img/HD-photos/add-on5.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CVde2hQFZHE/" target="_blank"><img class="img-fluid" src="img/HD-photos/glamp-clients2.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CVde2hQFZHE/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients2.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-fluid" src="img/HD-photos/glamp-tent3.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent3.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-fluid" src="img/HD-photos/glamp-clients3.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients3.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-fluid" src="img/HD-photos/glamp-tent11.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent11.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-fluid" src="img/HD-photos/inside-tent1.jpeg" alt="...">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-instagram" src="img/HD-photos/inside-tent1.jpeg" alt="...">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
         </div>
       </div>
