--- a/policies.html
+++ b/policies.html
@@ -91,7 +91,7 @@
             <div class="row text-center">
                 <h6 class="mt-3 lead">Payment Policy</h6>
                 <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
-                <h6 class="mt-3 lead">Cancellation Policy</h6>
+                <h6 class="mt-3 lead">Terms and Conditions</h6>
                 <p class="mb-3">No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
             </div>
             <div class="row ">
