--- a/glamping-party.html
+++ b/glamping-party.html
@@ -67,7 +67,7 @@
                 <!-- Navbar link--><a class="nav-link active" href="glamping-party.html">Lounge</a>
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Plamping</a>
+                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
               </li>
               <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
@@ -80,32 +80,28 @@
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
         <div class="row">
-          <div class="col">
-            <div class="row">
-              <h3 class="text-center logo-font mt-5">Lounge</h3>
-            </div>
-            <div class="row px-5 floated">
-              <h5>Includes</h5>
-              <ul>
-                <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-                <li>Floor cushions </li>
-                <li>Decor, rugs and throw pillows</li>
-                <li>Picnic table</li>
-                <li>Basket with throw blankets</li>
-                <li>Small trash can</li>
-                <li>Hand sanitizer</li>
-                <li>Outdoor/indoor lighting  </li>
-                <li>Custom letter board announcement</li>
-                <li>Board game</li>
-                <li>Set up and teardown is included </li>
-              </ul>
-              <h5>Price</h5>
-              <p>$450 a night<sup>*</sup> </p>
-              <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-            </div>
+          <h3 class="text-center logo-font mt-5">Lounge</h3>
+          <div class="col col-lg-6 order-lg-last">
+                <img src="img/HD-photos/cynthia-family.jpeg" class="img-fluid" id="glamping-party-img" alt="">
           </div>
-          <div class="col">
-            <img src="img/HD-photos/cynthia-family.jpeg" id="glamping-party-img" alt="">
+          <div class="col col-lg-6 floated-lounge">
+            <h5>Includes</h5>
+            <ul>
+              <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
+              <li>Floor cushions </li>
+              <li>Decor, rugs and throw pillows</li>
+              <li>Picnic table</li>
+              <li>Basket with throw blankets</li>
+              <li>Small trash can</li>
+              <li>Hand sanitizer</li>
+              <li>Outdoor/indoor lighting  </li>
+              <li>Custom letter board announcement</li>
+              <li>Board game</li>
+              <li>Set up and teardown is included </li>
+            </ul>
+            <h5>Price</h5>
+            <p>$450 a night<sup>*</sup> </p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
           </div>
         </div>
         <div class="row" style="background-color: rgb(248, 240, 230);">
