--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
       <div class="row">
         <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-            <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Plamping</h4>
+            <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Picnic</h4>
             <div class="col d-flex justify-content-center mt-5 mb-5">
               <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
             </div>
