--- a/picnic.html
+++ b/picnic.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Details by Cyn | Plamping</title>
+    <title>Details by Cyn | Picnic</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -67,7 +67,7 @@
                 <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link active" href="picnic.html">Plamping</a>
+                <!-- Navbar link--><a class="nav-link active" href="picnic.html">Picnic</a>
               </li>
               <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
@@ -78,11 +78,11 @@
       </nav>
     </header>
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
+      <div class="container-fluid px-0 pnb-4" >
         <div class="row">
           <div class="col p-0">
             <div class="row">
-              <h3 class="text-center logo-font mt-5">Plamping for 2</h3>
+              <h3 class="text-center logo-font mt-5">Picnic</h3>
             </div>
             <div class="row px-0 floated">
               <h5>Includes</h5>
@@ -112,41 +112,6 @@
           </div>
           <div class="col p-0">
             <img src="img/HD-photos/picnic-2.jpeg" class="picnic-photos" alt="">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col p-0">
-            <img src="img/HD-photos/picnic-1.jpeg" class="picnic-photos" alt="">
-          </div>
-          <div class="col p-0" style="background-color: rgb(248, 240, 230);">
-            <div class="row">
-              <h3 class="text-center logo-font mt-5">Plamping for 4</h3>
-            </div>
-            <div class="row px-0 floated">
-              <h5>Includes</h5>
-              <ul>
-                <li>Handmade low table for 4</li>
-                <li>Dinnerware, glassware, flatware and napkins</li>
-                <li>Decor table, centerpiece and runner</li>
-                <li>Rugs and pillows for seating </li>
-                <li>Basket with throw blankets</li>
-                <li>Small trash can</li>
-                <li>Hand sanitizer </li>
-                <li>Boxed water per guest</li>
-                <li>Custom letter board announcement </li>
-                <li>charcuterie of meets, cheeses and seasonal assortments</li>
-                <li>Set up and teardown is included</li>
-              </ul>
-              <h5>Add ons </h5>
-              <ul>
-                <li>Charcuterie board </li>
-                <li>Instant camera </li>
-                <li>Balloons </li>
-              </ul>
-              <h5>Price</h5>
-              <p>$275 for 2 hours <sup>*</sup> (extra hour can be added on)</p>
-              <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-            </div>
           </div>
         </div>
         <div class="row">
