--- a/comingsoon.html
+++ b/comingsoon.html
@@ -17,7 +17,7 @@
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/comingsoon.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
     
@@ -81,125 +81,7 @@
     <!-- Main post-->
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4">
-        <div class="row">
-          <div class="col">
-            <img src="img/HD-photos/glamp-main-photo.jpeg" id="main-photo"alt="">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center mt-5 mb-5">
-            <button type="button" class="btn btn-design">Book Now</button>
-          </div>
-          <div class="row mt-4">
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-          </div>
-          <div class="row mt-3 mb-5 mx-1">
-            <div class="col">
-              <h4 class="text-center logo-font">Pick your glamping</h4>
-            </div>
-            <div class="col">
-              <h4 class="text-center logo-font">We set up</h4>
-            </div>
-            <div class="col">
-              <h4 class="text-center logo-font">You enjoy</h4>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-              <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Glamping</h4>
-              <p class="text-center lead mx-3">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
-              <div class="col d-flex justify-content-center mt-5 mb-5">
-                <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
-              </div>
-          </div>
-          <div class="col col-lg-6 g-0">
-              <img src="img/HD-photos/cynthia-family.jpeg" class="home-img" width="100%" alt="">
-          </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-6">
-          <img src="img/HD-photos/glamp-tent11.jpeg" class="home-img" width="100%" alt="">
-        </div>
-        <div class="col col-lg-6 order-first order-lg-last">
-          <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Lounge</h4>
-          <p class="text-center lead">Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
-          <div class="col d-flex justify-content-center mt-5 mb-5">
-            <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-            <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Picnic</h4>
-            <div class="col d-flex justify-content-center mt-5 mb-5">
-              <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
-            </div>
-        </div>
-        <div class="col col-lg-6 g-0">
-            <img src="img/HD-photos/picnic-1.jpeg" class="home-img" alt="">
-        </div>
-    </div>
-      <div class="row">
-        <div class="col pb-5">
-          <h4 class="text-center mt-5 logo-font">Add-ons</h4>
-          <p class="text-center lead">Customize your Glamping</p>
-          <div class="container pt-lg-5 d-flex justify-content-center">
-            <div class="row">
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="charcuterie-add-on" src="img/HD-photos/add-on3.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Charcuterie</figcaption>
-                </figure>
-              </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="picnic-table-add-on" src="img/HD-photos/add-on.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Picnic Table</figcaption>
-                </figure>
-              </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
-                </figure>
-              </div>
-              <div class="col col-lg-3 g-3 d-flex justify-content-center">
-                <figure>
-                  <img class="add-on-imgs" id="balloons-add-on" src="img/HD-photos/add-on5.jpeg" alt="">
-                  <figcaption class="lead text-center add-on-text pt-3">Balloons</figcaption>
-                </figure>
-              </div>
-            </div>
-  
-          </div>
-        </div>
-      </div>
-      <div class="row" style="background-color: rgba(233, 202, 163, 0.29);">
-        <h4 class="text-center mt-5 logo-font">Customer Testimonials</h4>
-        <!--Start carousel-->
 
-        <!--End carousel-->
-        <div class="row">
-
-          <div class="col">
-            <p class="text-center lead testimonials">"Thank you for providing us with a incredible experience this weekend! if you are looking for a luxury outdoor experience in the confort of your backyard, then look no further! Glamping by Cyn is the place. the level of intentional and love is just amazing" - Ed C.</p>
-            <p class="text-center"></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <p class="text-center lead testimonials">"Thank you to @glampingbycyn for making this anniversary surprise happen!!! We have been planning this for quite some time and it was so hard to keep this a secret from lan!! It was so special and truly unforgettable. Thank you for everything."  <br> - Brooklyn L.</p>
-          </div>
-        </div>
       </div>
     </div>
     </section>
