update coming soon page
coming soon page

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -58,16 +58,16 @@
                 <!-- Navbar link--><a class="nav-link active" href="comingsoon.html">Coming Soon</a>
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link active" href="index.html">Home</a>
+                <!-- Navbar link--><a class="nav-link" href="comingsoon.html">Home</a>
               </li>
-              <li class="nav-item text-center"><a class="nav-link" href="backyard-glamping.html">Glamping</a>
+              <li class="nav-item text-center"><a class="nav-link" href="comingsoon.html">Glamping</a>
                 
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="glamping-party.html">Lounge</a>
+                <!-- Navbar link--><a class="nav-link" href="comingsoon.html">Lounge</a>
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="picnic.html">Picnic</a>
+                <!-- Navbar link--><a class="nav-link" href="comingsoon.html">Picnic</a>
               </li>
               <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
