--- a/comingsoon.html
+++ b/comingsoon.html
@@ -67,7 +67,7 @@
                 <!-- Navbar link--><a class="nav-link" href="comingsoon.html">Picnic</a>
               </li>
               <li class="nav-item text-center">
-                <!-- Navbar link--><a class="nav-link" href="policies.html">Policies</a>
+                <!-- Navbar link--><a class="nav-link" href="coming-soon.html">Policies</a>
               </li>
             </ul>
           </div>
