--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
           </div>
           <div class="col-6">
-            <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Details by Cyn</a>
+            <div class="row d-flex justify-content-center">
+              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
             </div>
           </div>
           <div class="col-3">
