--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -34,11 +34,8 @@
 
           </div>
           <div class="col-6">
-            <div class="row text-center">
-              <p>est 2021</p>
-            </div>
-            <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Details by Cyn</a>
+            <div class="row d-flex justify-content-center">
+              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
             </div>
           </div>
           <div class="col-3">
@@ -79,22 +76,60 @@
     </header>
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
-        <div class="row">
-          <h3 class="text-center logo-font pt-5">Glamping</h3>
-          <div class="col">
-              <div class="img-stack pt-5">
-                <div class="img-stack-top">
-                  <img class="img-fluid" src="img/HD-photos/inside-tent4.jpeg" id="top-photo" alt="bottom photo">
-                </div>
-                <div class="img-stack-bottom">
-                  <img class="img-fluid" src="img/HD-photos/glamp-main-photo.jpeg" id="bottom-photo"alt="bottom photo">
-                </div>
+        <h3 class="text-center logo-font pt-5">Glamping</h3>
+        < class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
+          <div class="carousel-indicators">
+              <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
+              <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
+              <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
+          </div>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
+              </div>
+              <div class="carousel-item ">
+                  <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
+              </div>
+              <div class="carousel-item ">
+                  <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
               </div>
           </div>
-        </div>
-      </div>
-      <div class="container-fluid" style="background-color: rgba(233, 202, 163, 0.29);">
-        <div class="row floated">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+        <\\
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      '//''
+        <div class="row">
           <h5>Includes</h5>
           <ul class="px-5">
             <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
@@ -112,13 +147,12 @@
           <p>$450 a night<sup>*</sup> </p>
           <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
         </div>
-      </div>
-        
         <div class="row " style="background-color: rgb(248, 240, 230);">
           <div class="col d-flex justify-content-center mt-5 mb-5">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
         </div>
+      </div>
 
     </section>
     <footer class="py-4" style="background: #111">
