--- a/picnic.html
+++ b/picnic.html
@@ -34,8 +34,8 @@
 
           </div>
           <div class="col-6">
-            <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Details by Cyn</a>
+            <div class="row d-flex justify-content-center">
+              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
             </div>
           </div>
           <div class="col-3">
@@ -80,6 +80,32 @@
           <div class="col p-0">
             <div class="row">
               <h3 class="text-center logo-font mt-5">Picnic</h3>
+              <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
+                <div class="carousel-indicators">
+                    <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
+                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
+                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
             <div class="row px-0 floated">
               <h5>Includes</h5>
@@ -106,9 +132,6 @@
                 <li>Balloons </li>
               </ul>
             </div>
-          </div>
-          <div class="col p-0">
-            <img src="img/HD-photos/picnic-2.jpeg" class="picnic-photos" alt="">
           </div>
         </div>
         <div class="row">
