--- a/policies.html
+++ b/policies.html
@@ -38,8 +38,8 @@
             <div class="row text-center">
               <p>est 2021</p>
             </div>
-            <div class="row text-center">
-              <a class="logo logo-font" href="index.html">Details by Cyn</a>
+            <div class="row d-flex justify-content-center">
+              <img src="img/detail-by-cyn-logo.PNG" class="logo-image" alt="details by cyn logo">
             </div>
           </div>
           <div class="col-3">
