changed the layout of website

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -19,8 +19,9 @@
     <link rel="stylesheet" href="css/comingsoon.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
-    
-  </head>
+    <!--Other Fonts-->
+    <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
+    </head>
   <body>
     <!-- navbar-->
     <header class="header">                   
@@ -89,12 +90,7 @@
               <a href="/"><button class="bn30">Notify Me</button></a>
             </div>
           </div>
-
         </div>
-          <div class="col">
-            
-
-          </div>
       </div>
     </div>
     </section>
