--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
-    
+
+    <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
   </head>
   <body>
     <!-- navbar-->
