--- a/picnic.html
+++ b/picnic.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
+    <!--Other Fonts-->
+    <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
   </head>
   <body>
     <!-- navbar-->
@@ -75,71 +77,42 @@
       </nav>
     </header>
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" >
-        <div class="row">
-          <div class="col p-0">
-            <div class="row">
-              <h3 class="text-center logo-font mt-5">Picnic</h3>
-              <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
-                <div class="carousel-indicators">
-                    <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
-                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
-                    <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item ">
-                        <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item ">
-                        <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </div>
-            <div class="row px-0 floated">
-              <h5>Includes</h5>
-              <ul>
-                <li>Handmade low table for 2</li>
-                <li>Dinnerware, glassware, flatware and napkins</li>
-                <li>Decor table, centerpiece and runner</li>
-                <li>Rugs and pillows for seating </li>
-                <li>Basket with throw blankets</li>
-                <li>Small trash can</li>
-                <li>Hand sanitizer </li>
-                <li>Boxed water per guest</li>
-                <li>Custom letter board announcement </li>
-                <li>charcuterie of meets, cheeses and seasonal assortments</li>
-                <li>Set up and teardown is included</li>
-              </ul>
-              <h5>Price</h5>
-              <p>$225 for 2 hours <sup>*</sup> (extra hour can be added on)</p>
-              <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-              <h5>Add ons </h5>
-              <ul>
-                <li>Charcuterie board </li>
-                <li>Instant camera </li>
-                <li>Balloons </li>
-              </ul>
-            </div>
+      <div class="container-fluid px-0 pnb-4" id="picnic-background" >
+        <div class="row transparent-bg text-center">
+          <div class="col-12 mt-5">
+            <h1>Picnic</h1>
           </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center mt-5">
-            <button type="button" class="btn btn-design mb-5">Book Now</button>
+          <div class="col-12">
+            <img class="mt-4" src="/img/HD-photos/picnic-3.JPG" style="width: 400px; height: 300px; object-fit: cover;" alt="cynthia's family">
           </div>
+          <div class="col-12 content-styling">
+            <h5 class="mt-5">Includes</h5>
+            <ul class="px-5">
+              <li>Handmade low table for 2</li>
+              <li>Dinnerware, glassware, flatware and napkins</li>
+              <li>Decor table, centerpiece and runner</li>
+              <li>Rugs and pillows for seating </li>
+              <li>Basket with throw blankets</li>
+              <li>Small trash can</li>
+              <li>Hand sanitizer </li>
+              <li>Boxed water per guest</li>
+              <li>Custom letter board announcement </li>
+              <li>charcuterie of meets, cheeses and seasonal assortments</li>
+              <li>Set up and teardown is included</li>
+            </ul>
+            <h5>Add ons</h5>
+            <ul style="position: relative; right: 15px;">
+              <li>Charcuterie board </li>
+              <li>Instant camera </li>
+              <li>Balloons </li>
+            </ul>
+            <h5>Price</h5>
+            <p>$225 for 2 hours <sup>*</sup> (extra hour can be added on)</p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
         </div>
-      
+        <div class="col-12 mb-3">
+          <button type="button" class="btn btn-design">Book Now</button>
+        </div>
       </div>
     </section>
     <footer class="py-4" style="background: #111">
