--- a/glamping-party.html
+++ b/glamping-party.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
+    <!--Other Fonts-->
+    <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
   </head>
   <body>
     <!-- navbar-->
@@ -75,38 +77,17 @@
       </nav>
     </header>
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
-        <div class="row">
-          <h3 class="text-center logo-font mt-5">Lounge</h3>
-          <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
-            <div class="carousel-indicators">
-                <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
-                <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
-                </div>
-                <div class="carousel-item ">
-                    <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
-                </div>
-                <div class="carousel-item ">
-                    <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+      <div class="container-fluid px-0 pnb-4" id="lounge-background">
+        <div class="row transparent-bg text-center">
+          <div class="col-12 mt-5">
+            <h1>Lounge</h1>
           </div>
-          <div class="col col-lg-6 floated-lounge">
-            <h5>Includes</h5>
-            <ul>
+          <div class="col-12">
+            <img class="mt-4" src="/img/HD-photos/glamp-clients2.jpeg" style="width: 400px; height: 300px; object-fit: cover;" alt="cynthia's family">
+          </div>
+          <div class="col-12 content-styling">
+            <h5 class="mt-4">Includes</h5>
+            <ul class="px-5">
               <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
               <li>Floor cushions </li>
               <li>Decor, rugs and throw pillows</li>
@@ -123,12 +104,13 @@
             <p>$450 a night<sup>*</sup> </p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
           </div>
-        </div>
-        <div class="row" style="background-color: rgb(248, 240, 230);">
-          <div class="col d-flex justify-content-center mt-5">
+          <div class="col-12 mb-3">
             <button type="button" class="btn btn-design">Book Now</button>
           </div>
+        
         </div>
+
+
       </div>
     </section>
     <footer class="py-4" style="background: #111">
