--- a/policies.html
+++ b/policies.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
+    <!--Other Fonts-->
+    <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
     
   </head>
   <body>
@@ -80,25 +82,23 @@
     </header>
     <!-- Main post-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4">
-        <div class="col" style="background-color: rgba(233, 202, 163, 0.29);">
-            <div class="row ">
-                <div class="col d-flex justify-content-center">
-                    <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
-                </div>
-            </div>
-            <h4 class="text-center logo-font pt-3">Policies</h4>
-            <div class="row text-center">
-                <h6 class="mt-3 lead">Payment Policy</h6>
-                <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
-                <h6 class="mt-3 lead">Terms and Conditions</h6>
-                <p class="mb-3">No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
-            </div>
-            <div class="row ">
-                <div class="col d-flex justify-content-center">
-                    <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
-                </div>
-            </div>
+      <div class="container-fluid px-0 pnb-4" id="policies-background">
+        <div class="row transparent-bg text-center" >
+          <div class="col-12 mt-5">
+            <h1>Policies</h1>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+              <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+          </div>
+          <div class="col-12 content-styling">
+            <h5>Payment Policy</h5>
+            <p>We require a 25% due at time of booking remaining balance due 1 week prior to your desired day</p>
+            <h5>Terms and Conditions</h5>
+            <p>No cancellations or rescheduling can be made within 72 hours of your glamping experience, picnic, or event. Your non-refundable deposit may be used as a credit to reschedule your booking if needed. Once your glamping experience, event or picnic is set up on the day of your reservation, we cannot  cancel or reschedule and your deposit will no be refunded.</p>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+            <img src="img/floral-design-with-curled-edges.png" height="90px" width="100px" alt="floral design">
+          </div>
         </div>
       </div>
     </section>
