--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -78,12 +78,12 @@
     </header>
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" id="glamping-background" >
-        <div class="row transparent-bg text-center">
+        <div class="row transparent-bg">
           <div class="col-12 mt-5">
               <h1>Glamping</h1>
           </div>
           <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/cynthia-family.jpeg" style="width: 400px; height: 300px; object-fit: cover;" alt="cynthia's family">
+            <img class="mt-4" src="/img/HD-photos/glamp-tent5.jpeg" alt="Tent">
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
