--- a/glamping-party.html
+++ b/glamping-party.html
@@ -83,8 +83,9 @@
             <h1>Lounge</h1>
           </div>
           <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/glamp-clients2.jpeg" style="width: 400px; height: 300px; object-fit: cover;" alt="cynthia's family">
+            <img class="mt-4" src="/img/HD-photos/cynthia-family.jpeg" alt="cynthia's family">
           </div>
+
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
             <ul class="px-5">
@@ -101,7 +102,7 @@
               <li>Set up and teardown is included </li>
             </ul>
             <h5>Price</h5>
-            <p>$450 a night<sup>*</sup> </p>
+            <p><strong>450 a night<sup>*</sup></strong> </p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
           </div>
           <div class="col-12 mb-3">
