--- a/home.html
+++ b/home.html
@@ -78,74 +78,13 @@
     </header>
     <!-- Main post-->
     <section class="pb-0">
-      <div class="container-fluid px-0 pnb-4">
-        <div class="row">
-          <div class="col">
-            <img src="img/HD-photos/glamp-main-photo.jpeg" id="main-photo"alt="">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center mt-5 mb-5">
-            <button type="button" class="btn btn-design">Book Now</button>
-          </div>
-          <div class="row mt-4">
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-            <div class="col text-center">
-              <i class="logo-font fa-brands fa-pagelines fa-xl"></i>
-            </div>
-          </div>
-          <div class="row mt-3 mb-5 mx-1">
-            <div class="col">
-              <h4 class="text-center logo-font">Pick your glamping</h4>
-            </div>
-            <div class="col">
-              <h4 class="text-center logo-font">We set up</h4>
-            </div>
-            <div class="col">
-              <h4 class="text-center logo-font">You enjoy</h4>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-              <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Glamping</h4>
-              <p class="text-center lead mx-3">Perfect for date nights, family nights, or a weekend getaway right in your backyard!</p>
-              <div class="col d-flex justify-content-center mt-5 mb-5">
-                <button type="button" class="btn btn-design"><a href="backyard-glamping.html">Learn more</a></button>
-              </div>
-          </div>
-          <div class="col col-lg-6 g-0">
-              <img src="img/HD-photos/cynthia-family.jpeg" class="home-img" width="100%" alt="">
-          </div>
+      <div class="container-fluid px-0 pnb-4" id="home-background">
+          div.row
       </div>
-      <div class="row">
-        <div class="col col-lg-6">
-          <img src="img/HD-photos/glamp-tent11.jpeg" class="home-img" width="100%" alt="">
-        </div>
-        <div class="col col-lg-6 order-first order-lg-last">
-          <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Lounge</h4>
-          <p class="text-center lead">Perfect for weddings, birthdays, graduations, backyard bbq and parties!</p>
-          <div class="col d-flex justify-content-center mt-5 mb-5">
-            <button type="button" class="btn btn-design"><a href="glamping-party.html">Learn more</a></button>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col col-lg-6 g-0" style="background-color: rgba(233, 202, 163, 0.29);">
-            <h4 class="text-center mt-lg-5 logo-font" style="padding-top: 150px">Picnic</h4>
-            <div class="col d-flex justify-content-center mt-5 mb-5">
-              <button type="button" class="btn btn-design"><a href="picnic.html">Learn more</a></button>
-            </div>
-        </div>
-        <div class="col col-lg-6 g-0">
-            <img src="img/HD-photos/picnic-1.jpeg" class="home-img" alt="">
-        </div>
+
+    <!--Start New Container-->
     </div>
+    <div class="container-fluid px-0 pnb-4">
       <div class="row">
         <div class="col pb-5">
           <h4 class="text-center mt-5 logo-font">Add-ons</h4>
@@ -177,7 +116,6 @@
                 </figure>
               </div>
             </div>
-  
           </div>
         </div>
       </div>
