--- a/picnic.html
+++ b/picnic.html
@@ -83,7 +83,7 @@
             <h1>Picnic</h1>
           </div>
           <div class="col-12">
-            <img class="mt-4" src="/img/HD-photos/picnic-3.JPG" style="width: 400px; height: 300px; object-fit: cover;" alt="cynthia's family">
+            <img class="mt-4" src="/img/HD-photos/picnic-3.JPG">
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-5">Includes</h5>
